# sound_vision

./: CMakeLists.txt  analyze.pro  chair_right.txt  gnuplot-iostream.h  main.cpp  mainwindow.cpp  mainwindow.ui  mathematical_functions.h  res.txt  res_center.txt  soundanalyze.cpp  soundanalyze.h  soundanalyze.ui
